added link to repo

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
            </div>
        </div>
    </div>
+   <footer><a href="https://github.com/inertiawhoosh/weather-app">View Repository </a></footer>
 </body>
 <script type="text/javascript" src="script.js"></script>
 </html>
