--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 </div>
                         <div class="row top-details">
                             <h1>
-                                <strong id="city-name">Denver, USA  </strong>
+                                <strong id="city-name">San Francisco</strong>
                             </h1>
                         </div>
                         <div class="date">
