all data for main section now available minus conversions

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 </div>
                         <div class="row top-details">
                             <h1>
-                                <strong id="city-name">San Francisco</strong>
+                                <strong id="city-name">Cupertino</strong>
                             </h1>
                         </div>
                         <div class="date">
@@ -39,7 +39,7 @@
                         <span>
                             <strong id="current-temp">20°F</strong>
                         </span>
-                        <p id='high-low'>10°F/20°F</p>
+                        <p id='high-low'><span id="low"></span> / <span id="high"></span></p>
                     </div>
                     <div id="bottom">
                         <div class="row">
@@ -49,10 +49,9 @@
                                 </span>
                             </div>
                             <div class="col-9 current-precip">
-                                <h3><strong>rain</strong></h3>
-                                <p id='precip-details'>
-                                    chance of rain 65%
-                                </p>
+                                <h3><strong id="weather-description">rain</strong></h3>
+                                <p id='precip-details'>chance of rain 65%</p>
+                                <p>🌬<span id="wind"></span> | 💧<span id="humidity"></span>% </p>
                             </div>
                         </div>
                     </div>
