added all main emojis

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <div class="col-9 current-precip">
                                 <h3><strong id="weather-description">rain</strong></h3>
                                 <p id='precip-details'>chance of rain 65%</p>
-                                <p>🌬<span id="wind"></span> | 💧<span id="humidity"></span>% </p>
+                                <p id="other-details">🌬<span id="wind"></span> | 💧<span id="humidity"></span>% </p>
                             </div>
                         </div>
                     </div>
