basics for upcoming forecast

--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
                     </div>
                 </div>
                 <div id="future-forecast" class="col 5">
-                    <div id="five-day-title">
-                       
-                    </div>
-                    <div class="five-day">
+                    <!--<div class="five-day">
                         <div class="row small-forecast-box">
                             <div class="little-forecast col-8">
                                 <span class="forecast-date">
@@ -134,7 +131,7 @@
                                     🌨️
                                 </div>
                             </div>
-                    </div>
+                    </div>-->
                 </div>
            </div>
        </div>
