added c/f logic change, minus UI updates

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <div id="main">
        <div id="search-section">
            <form>
-                <input type="text" placeholder="Search.." id="search-bar">
+                <input type="text" placeholder="Search.." value="cupertino" id="search-bar">
                 <button type="submit">Search</button>
                 <button id="current-location">Current</button>
            </form>
@@ -57,81 +57,6 @@
                     </div>
                 </div>
                 <div id="future-forecast" class="col 5">
-                    <!--<div class="five-day">
-                        <div class="row small-forecast-box">
-                            <div class="little-forecast col-8">
-                                <span class="forecast-date">
-                                    Tomorrow <br/>
-                                </span>
-                                <div class="forecast-temps">
-                                    10°F/20°F
-                                </div>
-                            </div>
-                            <div class="little-emoji col-4">
-                                🌨️
-                            </div>
-                        </div>
-                    </div>
-                    <div class="five-day">
-                        <div class="row small-forecast-box">
-                                <div class="little-forecast col-8">
-                                    <span class="forecast-date">
-                                        Monday, June 30th
-                                    </span><br/>
-                                    <div class="forecast-temps">
-                                        10°F/20°F
-                                    </div>
-                                </div>
-                                <div class="little-emoji col-4">
-                                    ⛅
-                                </div>
-                            </div>
-                    </div>
-                    <div class="five-day">
-                        <div class="row small-forecast-box">
-                                <div class="little-forecast col-8">
-                                    <span class="forecast-date">
-                                        Tuesday, July 1st <br/>
-                                    </span>
-                                    <div class="forecast-temps">
-                                        10°F/20°F
-                                    </div>
-                                </div>
-                                <div class="little-emoji col-4">
-                                    🌨️
-                                </div>
-                            </div>
-                    </div>
-                    <div class="five-day">
-                        <div class="row small-forecast-box">
-                                <div class="little-forecast col-8">
-                                    <span class="forecast-date">
-                                        Wednesday, July 2nd <br/>
-                                    </span>
-                                    <div class="forecast-temps">
-                                        10°F/20°F
-                                    </div>
-                                </div>
-                                <div class="little-emoji col-4">
-                                    🌨️
-                                </div>
-                            </div>
-                    </div>
-                    <div class="five-day small-forecast-box">
-                        <div class="row">
-                                <div class="little-forecast col-8">
-                                    <span class="forecast-date">
-                                        Thursday, July 3rd <br/>
-                                    </span>
-                                    <div class="forecast-temps">
-                                        10°F/20°F
-                                    </div>
-                                </div>
-                                <div class="little-emoji col-4">
-                                    🌨️
-                                </div>
-                            </div>
-                    </div>-->
                 </div>
            </div>
        </div>
